Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANDEQUAL
    CHAR
    CHARACTER
    DIVEQUAL
    DIVIDE
    DO
    FLOAT
    INCLUDE
    INTEGER
    LAND
    LNOT
    LOR
    LSHIFT
    LSHIFTEQUAL
    MINUS
    MINUSEQUAL
    MODEQUAL
    MODULO
    NE
    OREQUAL
    PACKAGE
    PLUSEQUAL
    RETURN
    RSHIFT
    RSHIFTEQUAL
    TERNARY
    TIMES
    TIMESEQUAL
    TYPEID
    WHILE
    XOR
    XOREQUAL

Grammar

Rule 0     S' -> program
Rule 1     program -> class_declaration
Rule 2     program -> program class_declaration
Rule 3     class_declaration -> CLASS ID LBRACE class_body RBRACE
Rule 4     class_body -> statements main
Rule 5     class_body -> class_declaration
Rule 6     class_body -> main
Rule 7     class_body -> statements
Rule 8     class_body -> statements main statements
Rule 9     main -> PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET ARGS RPAREN LBRACE statements RBRACE
Rule 10    statement -> empty
Rule 11    statement -> assignment
Rule 12    statement -> array_usage
Rule 13    statement -> array_dcl
Rule 14    statement -> array_assignment
Rule 15    statement -> print_statement
Rule 16    statement -> dcl_variable SEMI
Rule 17    statement -> dcl_variable_with_init SEMI
Rule 18    statement -> for_statement
Rule 19    statement -> if_statement
Rule 20    expression -> ID
Rule 21    expression -> NUMBER
Rule 22    expression -> STRING_LITERAL
Rule 23    expression -> NOT expression
Rule 24    condicion -> <empty>
Rule 25    condicion -> NUMBER EQ NUMBER
Rule 26    condicion -> NUMBER GT NUMBER
Rule 27    condicion -> NUMBER GE NUMBER
Rule 28    condicion -> NUMBER LE NUMBER
Rule 29    condicion -> NUMBER LT NUMBER
Rule 30    condicion_var -> ID EQ NUMBER
Rule 31    condicion_var -> ID GT NUMBER
Rule 32    condicion_var -> ID GE NUMBER
Rule 33    condicion_var -> ID LE NUMBER
Rule 34    condicion_var -> ID LT NUMBER
Rule 35    condicion_var -> ID AND NUMBER
Rule 36    condicion_var -> ID OR NUMBER
Rule 37    condicion_var -> ID AND ID
Rule 38    condicion_var -> ID OR ID
Rule 39    condicion_var -> ID EQ ID
Rule 40    condicion_var -> ID EQ STRING_LITERAL
Rule 41    condicion_var -> ID EQUALS propiedades
Rule 42    condicion_var -> ID GT propiedades
Rule 43    condicion_var -> ID GE propiedades
Rule 44    condicion_var -> ID LE propiedades
Rule 45    condicion_var -> ID LT propiedades
Rule 46    condicion_if -> ID EQ NUMBER
Rule 47    condicion_if -> ID GT NUMBER
Rule 48    condicion_if -> ID GE NUMBER
Rule 49    condicion_if -> ID LE NUMBER
Rule 50    condicion_if -> ID LT NUMBER
Rule 51    condicion_if -> ID AND NUMBER
Rule 52    condicion_if -> ID OR NUMBER
Rule 53    condicion_if -> ID AND ID
Rule 54    condicion_if -> ID OR ID
Rule 55    condicion_if -> ID EQ ID
Rule 56    condicion_if -> ID EQ STRING_LITERAL
Rule 57    condicion_if -> ID EQUALS propiedades
Rule 58    condicion_if -> ID GT propiedades
Rule 59    condicion_if -> ID GE propiedades
Rule 60    condicion_if -> ID LE propiedades
Rule 61    condicion_if -> ID LT propiedades
Rule 62    increment_or_decrement -> ID INCREMENT
Rule 63    increment_or_decrement -> ID DECREMENT
Rule 64    for_statement -> FOR LPAREN inicializacion SEMI condicion SEMI increment_or_decrement RPAREN LBRACE statements RBRACE
Rule 65    for_statement -> FOR LPAREN inicializacion SEMI condicion_var SEMI increment_or_decrement RPAREN LBRACE statements RBRACE
Rule 66    for_statement -> FOR LPAREN dcl_variable COLON ID RPAREN LBRACE statements RBRACE
Rule 67    inicializacion -> INT ID EQUALS NUMBER
Rule 68    if_statement -> IF LPAREN condicion RPAREN LBRACE statements RBRACE
Rule 69    if_statement -> IF LPAREN condicion RPAREN LBRACE statements RBRACE ELSE statements
Rule 70    if_statement -> IF LPAREN condicion RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 71    if_statement -> IF LPAREN condicion_if RPAREN LBRACE statements RBRACE
Rule 72    if_statement -> IF LPAREN condicion_if RPAREN LBRACE statements RBRACE ELSE statements
Rule 73    if_statement -> IF LPAREN condicion_if RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 74    args -> arg
Rule 75    args -> args arg
Rule 76    arg -> ID
Rule 77    arg -> STRING_LITERAL
Rule 78    arg -> NUMBER
Rule 79    arg -> NOT arg
Rule 80    arg -> ID COMMA
Rule 81    arg -> STRING_LITERAL COMMA
Rule 82    arg -> NUMBER COMMA
Rule 83    propiedades -> ID PUNTO ID
Rule 84    statements -> statement
Rule 85    statements -> statements statement
Rule 86    assignment -> ID EQUALS expression SEMI
Rule 87    suma -> NUMBER PLUS NUMBER
Rule 88    dcl_variable -> tipo_number ID
Rule 89    dcl_variable -> tipo_palabra ID
Rule 90    dcl_variable -> tipo_booleano ID
Rule 91    dcl_variable_with_init -> tipo_number ID EQUALS NUMBER
Rule 92    dcl_variable_with_init -> tipo_palabra ID EQUALS STRING_LITERAL
Rule 93    dcl_variable_with_init -> tipo_booleano ID EQUALS valor_boolean
Rule 94    dcl_variable_with_init -> tipo_number ID EQUALS suma
Rule 95    tipo_booleano -> BOOLEAN
Rule 96    tipo_number -> INT
Rule 97    tipo_number -> DOUBLE
Rule 98    tipo_palabra -> STRING
Rule 99    valor_boolean -> TRUE
Rule 100   valor_boolean -> FALSE
Rule 101   array_usage -> tipo_number LBRACKET RBRACKET ID EQUALS LBRACE args RBRACE SEMI
Rule 102   array_usage -> tipo_palabra LBRACKET RBRACKET ID EQUALS LBRACE args RBRACE SEMI
Rule 103   array_dcl -> tipo_number LBRACKET RBRACKET ID SEMI
Rule 104   array_dcl -> tipo_palabra LBRACKET RBRACKET ID SEMI
Rule 105   array_assignment -> ID EQUALS LBRACE args RBRACE SEMI
Rule 106   print_statement -> SYSTEM PUNTO OUT PUNTO PRINTLN LPAREN STRING_LITERAL RPAREN SEMI
Rule 107   print_statement -> SYSTEM PUNTO OUT PUNTO PRINTLN LPAREN ID RPAREN SEMI
Rule 108   print_statement -> SYSTEM PUNTO OUT PUNTO PRINTLN LPAREN ID LBRACKET ID RBRACKET RPAREN SEMI
Rule 109   empty -> <empty>

Terminals, with rules where they appear

AND                  : 35 37 51 53
ANDEQUAL             : 
ARGS                 : 9
BOOLEAN              : 95
CHAR                 : 
CHARACTER            : 
CLASS                : 3
COLON                : 66
COMMA                : 80 81 82
DECREMENT            : 63
DIVEQUAL             : 
DIVIDE               : 
DO                   : 
DOUBLE               : 97
ELSE                 : 69 70 72 73
EQ                   : 25 30 39 40 46 55 56
EQUALS               : 41 57 67 86 91 92 93 94 101 102 105
FALSE                : 100
FLOAT                : 
FOR                  : 64 65 66
GE                   : 27 32 43 48 59
GT                   : 26 31 42 47 58
ID                   : 3 20 30 31 32 33 34 35 36 37 37 38 38 39 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 53 54 54 55 55 56 57 58 59 60 61 62 63 66 67 76 80 83 83 86 88 89 90 91 92 93 94 101 102 103 104 105 107 108 108
IF                   : 68 69 70 71 72 73
INCLUDE              : 
INCREMENT            : 62
INT                  : 67 96
INTEGER              : 
LAND                 : 
LBRACE               : 3 9 64 65 66 68 69 70 70 71 72 73 73 101 102 105
LBRACKET             : 9 101 102 103 104 108
LE                   : 28 33 44 49 60
LNOT                 : 
LOR                  : 
LPAREN               : 9 64 65 66 68 69 70 71 72 73 106 107 108
LSHIFT               : 
LSHIFTEQUAL          : 
LT                   : 29 34 45 50 61
MAIN                 : 9
MINUS                : 
MINUSEQUAL           : 
MODEQUAL             : 
MODULO               : 
NE                   : 
NOT                  : 23 79
NUMBER               : 21 25 25 26 26 27 27 28 28 29 29 30 31 32 33 34 35 36 46 47 48 49 50 51 52 67 78 82 87 87 91
OR                   : 36 38 52 54
OREQUAL              : 
OUT                  : 106 107 108
PACKAGE              : 
PLUS                 : 87
PLUSEQUAL            : 
PRINTLN              : 106 107 108
PUBLIC               : 9
PUNTO                : 83 106 106 107 107 108 108
RBRACE               : 3 9 64 65 66 68 69 70 70 71 72 73 73 101 102 105
RBRACKET             : 9 101 102 103 104 108
RETURN               : 
RPAREN               : 9 64 65 66 68 69 70 71 72 73 106 107 108
RSHIFT               : 
RSHIFTEQUAL          : 
SEMI                 : 16 17 64 64 65 65 86 101 102 103 104 105 106 107 108
STATIC               : 9
STRING               : 9 98
STRING_LITERAL       : 22 40 56 77 81 92 106
SYSTEM               : 106 107 108
TERNARY              : 
TIMES                : 
TIMESEQUAL           : 
TRUE                 : 99
TYPEID               : 
VOID                 : 9
WHILE                : 
XOR                  : 
XOREQUAL             : 
error                : 

Nonterminals, with rules where they appear

arg                  : 74 75 79
args                 : 75 101 102 105
array_assignment     : 14
array_dcl            : 13
array_usage          : 12
assignment           : 11
class_body           : 3
class_declaration    : 1 2 5
condicion            : 64 68 69 70
condicion_if         : 71 72 73
condicion_var        : 65
dcl_variable         : 16 66
dcl_variable_with_init : 17
empty                : 10
expression           : 23 86
for_statement        : 18
if_statement         : 19
increment_or_decrement : 64 65
inicializacion       : 64 65
main                 : 4 6 8
print_statement      : 15
program              : 2 0
propiedades          : 41 42 43 44 45 57 58 59 60 61
statement            : 84 85
statements           : 4 7 8 8 9 64 65 66 68 69 69 70 70 71 72 72 73 73 85
suma                 : 94
tipo_booleano        : 90 93
tipo_number          : 88 91 94 101 103
tipo_palabra         : 89 92 102 104
valor_boolean        : 93

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_declaration
    (2) program -> . program class_declaration
    (3) class_declaration -> . CLASS ID LBRACE class_body RBRACE

    CLASS           shift and go to state 3

    program                        shift and go to state 1
    class_declaration              shift and go to state 2

state 1

    (0) S' -> program .
    (2) program -> program . class_declaration
    (3) class_declaration -> . CLASS ID LBRACE class_body RBRACE

    CLASS           shift and go to state 3

    class_declaration              shift and go to state 4

state 2

    (1) program -> class_declaration .

    CLASS           reduce using rule 1 (program -> class_declaration .)
    $end            reduce using rule 1 (program -> class_declaration .)


state 3

    (3) class_declaration -> CLASS . ID LBRACE class_body RBRACE

    ID              shift and go to state 5


state 4

    (2) program -> program class_declaration .

    CLASS           reduce using rule 2 (program -> program class_declaration .)
    $end            reduce using rule 2 (program -> program class_declaration .)


state 5

    (3) class_declaration -> CLASS ID . LBRACE class_body RBRACE

    LBRACE          shift and go to state 6


state 6

    (3) class_declaration -> CLASS ID LBRACE . class_body RBRACE
    (4) class_body -> . statements main
    (5) class_body -> . class_declaration
    (6) class_body -> . main
    (7) class_body -> . statements
    (8) class_body -> . statements main statements
    (84) statements -> . statement
    (85) statements -> . statements statement
    (3) class_declaration -> . CLASS ID LBRACE class_body RBRACE
    (9) main -> . PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET ARGS RPAREN LBRACE statements RBRACE
    (10) statement -> . empty
    (11) statement -> . assignment
    (12) statement -> . array_usage
    (13) statement -> . array_dcl
    (14) statement -> . array_assignment
    (15) statement -> . print_statement
    (16) statement -> . dcl_variable SEMI
    (17) statement -> . dcl_variable_with_init SEMI
    (18) statement -> . for_statement
    (19) statement -> . if_statement
    (109) empty -> .
    (86) assignment -> . ID EQUALS expression SEMI
    (101) array_usage -> . tipo_number LBRACKET RBRACKET ID EQUALS LBRACE args RBRACE SEMI
    (102) array_usage -> . tipo_palabra LBRACKET RBRACKET ID EQUALS LBRACE args RBRACE SEMI
    (103) array_dcl -> . tipo_number LBRACKET RBRACKET ID SEMI
    (104) array_dcl -> . tipo_palabra LBRACKET RBRACKET ID SEMI
    (105) array_assignment -> . ID EQUALS LBRACE args RBRACE SEMI
    (106) print_statement -> . SYSTEM PUNTO OUT PUNTO PRINTLN LPAREN STRING_LITERAL RPAREN SEMI
    (107) print_statement -> . SYSTEM PUNTO OUT PUNTO PRINTLN LPAREN ID RPAREN SEMI
    (108) print_statement -> . SYSTEM PUNTO OUT PUNTO PRINTLN LPAREN ID LBRACKET ID RBRACKET RPAREN SEMI
    (88) dcl_variable -> . tipo_number ID
    (89) dcl_variable -> . tipo_palabra ID
    (90) dcl_variable -> . tipo_booleano ID
    (91) dcl_variable_with_init -> . tipo_number ID EQUALS NUMBER
    (92) dcl_variable_with_init -> . tipo_palabra ID EQUALS STRING_LITERAL
    (93) dcl_variable_with_init -> . tipo_booleano ID EQUALS valor_boolean
    (94) dcl_variable_with_init -> . tipo_number ID EQUALS suma
    (64) for_statement -> . FOR LPAREN inicializacion SEMI condicion SEMI increment_or_decrement RPAREN LBRACE statements RBRACE
    (65) for_statement -> . FOR LPAREN inicializacion SEMI condicion_var SEMI increment_or_decrement RPAREN LBRACE statements RBRACE
    (66) for_statement -> . FOR LPAREN dcl_variable COLON ID RPAREN LBRACE statements RBRACE
    (68) if_statement -> . IF LPAREN condicion RPAREN LBRACE statements RBRACE
    (69) if_statement -> . IF LPAREN condicion RPAREN LBRACE statements RBRACE ELSE statements
    (70) if_statement -> . IF LPAREN condicion RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (71) if_statement -> . IF LPAREN condicion_if RPAREN LBRACE statements RBRACE
    (72) if_statement -> . IF LPAREN condicion_if RPAREN LBRACE statements RBRACE ELSE statements
    (73) if_statement -> . IF LPAREN condicion_if RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (96) tipo_number -> . INT
    (97) tipo_number -> . DOUBLE
    (98) tipo_palabra -> . STRING
    (95) tipo_booleano -> . BOOLEAN

  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for SYSTEM resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    CLASS           shift and go to state 3
    PUBLIC          shift and go to state 13
    RBRACE          reduce using rule 109 (empty -> .)
    ID              shift and go to state 7
    SYSTEM          shift and go to state 27
    FOR             shift and go to state 29
    IF              shift and go to state 30
    INT             shift and go to state 31
    DOUBLE          shift and go to state 32
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 33

  ! PUBLIC          [ reduce using rule 109 (empty -> .) ]
  ! ID              [ reduce using rule 109 (empty -> .) ]
  ! SYSTEM          [ reduce using rule 109 (empty -> .) ]
  ! FOR             [ reduce using rule 109 (empty -> .) ]
  ! IF              [ reduce using rule 109 (empty -> .) ]
  ! INT             [ reduce using rule 109 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 109 (empty -> .) ]
  ! STRING          [ reduce using rule 109 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 109 (empty -> .) ]

    class_body                     shift and go to state 8
    statements                     shift and go to state 9
    main                           shift and go to state 10
    class_declaration              shift and go to state 11
    statement                      shift and go to state 12
    empty                          shift and go to state 15
    assignment                     shift and go to state 16
    array_usage                    shift and go to state 17
    array_dcl                      shift and go to state 18
    array_assignment               shift and go to state 19
    print_statement                shift and go to state 20
    dcl_variable                   shift and go to state 21
    dcl_variable_with_init         shift and go to state 22
    for_statement                  shift and go to state 23
    if_statement                   shift and go to state 24
    tipo_number                    shift and go to state 25
    tipo_palabra                   shift and go to state 26
    tipo_booleano                  shift and go to state 28

state 7

    (86) assignment -> ID . EQUALS expression SEMI
    (105) array_assignment -> ID . EQUALS LBRACE args RBRACE SEMI

    EQUALS          shift and go to state 34


state 8

    (3) class_declaration -> CLASS ID LBRACE class_body . RBRACE

    RBRACE          shift and go to state 35


state 9

    (4) class_body -> statements . main
    (7) class_body -> statements .
    (8) class_body -> statements . main statements
    (85) statements -> statements . statement
    (9) main -> . PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET ARGS RPAREN LBRACE statements RBRACE
    (10) statement -> . empty
    (11) statement -> . assignment
    (12) statement -> . array_usage
    (13) statement -> . array_dcl
    (14) statement -> . array_assignment
    (15) statement -> . print_statement
    (16) statement -> . dcl_variable SEMI
    (17) statement -> . dcl_variable_with_init SEMI
    (18) statement -> . for_statement
    (19) statement -> . if_statement
    (109) empty -> .
    (86) assignment -> . ID EQUALS expression SEMI
    (101) array_usage -> . tipo_number LBRACKET RBRACKET ID EQUALS LBRACE args RBRACE SEMI
    (102) array_usage -> . tipo_palabra LBRACKET RBRACKET ID EQUALS LBRACE args RBRACE SEMI
    (103) array_dcl -> . tipo_number LBRACKET RBRACKET ID SEMI
    (104) array_dcl -> . tipo_palabra LBRACKET RBRACKET ID SEMI
    (105) array_assignment -> . ID EQUALS LBRACE args RBRACE SEMI
    (106) print_statement -> . SYSTEM PUNTO OUT PUNTO PRINTLN LPAREN STRING_LITERAL RPAREN SEMI
    (107) print_statement -> . SYSTEM PUNTO OUT PUNTO PRINTLN LPAREN ID RPAREN SEMI
    (108) print_statement -> . SYSTEM PUNTO OUT PUNTO PRINTLN LPAREN ID LBRACKET ID RBRACKET RPAREN SEMI
    (88) dcl_variable -> . tipo_number ID
    (89) dcl_variable -> . tipo_palabra ID
    (90) dcl_variable -> . tipo_booleano ID
    (91) dcl_variable_with_init -> . tipo_number ID EQUALS NUMBER
    (92) dcl_variable_with_init -> . tipo_palabra ID EQUALS STRING_LITERAL
    (93) dcl_variable_with_init -> . tipo_booleano ID EQUALS valor_boolean
    (94) dcl_variable_with_init -> . tipo_number ID EQUALS suma
    (64) for_statement -> . FOR LPAREN inicializacion SEMI condicion SEMI increment_or_decrement RPAREN LBRACE statements RBRACE
    (65) for_statement -> . FOR LPAREN inicializacion SEMI condicion_var SEMI increment_or_decrement RPAREN LBRACE statements RBRACE
    (66) for_statement -> . FOR LPAREN dcl_variable COLON ID RPAREN LBRACE statements RBRACE
    (68) if_statement -> . IF LPAREN condicion RPAREN LBRACE statements RBRACE
    (69) if_statement -> . IF LPAREN condicion RPAREN LBRACE statements RBRACE ELSE statements
    (70) if_statement -> . IF LPAREN condicion RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (71) if_statement -> . IF LPAREN condicion_if RPAREN LBRACE statements RBRACE
    (72) if_statement -> . IF LPAREN condicion_if RPAREN LBRACE statements RBRACE ELSE statements
    (73) if_statement -> . IF LPAREN condicion_if RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (96) tipo_number -> . INT
    (97) tipo_number -> . DOUBLE
    (98) tipo_palabra -> . STRING
    (95) tipo_booleano -> . BOOLEAN

  ! shift/reduce conflict for PUBLIC resolved as shift
  ! reduce/reduce conflict for RBRACE resolved using rule 7 (class_body -> statements .)
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for SYSTEM resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    RBRACE          reduce using rule 7 (class_body -> statements .)
    PUBLIC          shift and go to state 13
    ID              shift and go to state 7
    SYSTEM          shift and go to state 27
    FOR             shift and go to state 29
    IF              shift and go to state 30
    INT             shift and go to state 31
    DOUBLE          shift and go to state 32
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 33

  ! PUBLIC          [ reduce using rule 109 (empty -> .) ]
  ! ID              [ reduce using rule 109 (empty -> .) ]
  ! SYSTEM          [ reduce using rule 109 (empty -> .) ]
  ! FOR             [ reduce using rule 109 (empty -> .) ]
  ! IF              [ reduce using rule 109 (empty -> .) ]
  ! INT             [ reduce using rule 109 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 109 (empty -> .) ]
  ! STRING          [ reduce using rule 109 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 109 (empty -> .) ]
  ! RBRACE          [ reduce using rule 109 (empty -> .) ]

    main                           shift and go to state 36
    statement                      shift and go to state 37
    empty                          shift and go to state 15
    assignment                     shift and go to state 16
    array_usage                    shift and go to state 17
    array_dcl                      shift and go to state 18
    array_assignment               shift and go to state 19
    print_statement                shift and go to state 20
    dcl_variable                   shift and go to state 21
    dcl_variable_with_init         shift and go to state 22
    for_statement                  shift and go to state 23
    if_statement                   shift and go to state 24
    tipo_number                    shift and go to state 25
    tipo_palabra                   shift and go to state 26
    tipo_booleano                  shift and go to state 28

state 10

    (6) class_body -> main .

    RBRACE          reduce using rule 6 (class_body -> main .)


state 11

    (5) class_body -> class_declaration .

    RBRACE          reduce using rule 5 (class_body -> class_declaration .)


state 12

    (84) statements -> statement .

    PUBLIC          reduce using rule 84 (statements -> statement .)
    ID              reduce using rule 84 (statements -> statement .)
    SYSTEM          reduce using rule 84 (statements -> statement .)
    FOR             reduce using rule 84 (statements -> statement .)
    IF              reduce using rule 84 (statements -> statement .)
    INT             reduce using rule 84 (statements -> statement .)
    DOUBLE          reduce using rule 84 (statements -> statement .)
    STRING          reduce using rule 84 (statements -> statement .)
    BOOLEAN         reduce using rule 84 (statements -> statement .)
    RBRACE          reduce using rule 84 (statements -> statement .)


state 13

    (9) main -> PUBLIC . STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET ARGS RPAREN LBRACE statements RBRACE

    STATIC          shift and go to state 38


state 14

    (98) tipo_palabra -> STRING .

    LBRACKET        reduce using rule 98 (tipo_palabra -> STRING .)
    ID              reduce using rule 98 (tipo_palabra -> STRING .)


state 15

    (10) statement -> empty .

    PUBLIC          reduce using rule 10 (statement -> empty .)
    ID              reduce using rule 10 (statement -> empty .)
    SYSTEM          reduce using rule 10 (statement -> empty .)
    FOR             reduce using rule 10 (statement -> empty .)
    IF              reduce using rule 10 (statement -> empty .)
    INT             reduce using rule 10 (statement -> empty .)
    DOUBLE          reduce using rule 10 (statement -> empty .)
    STRING          reduce using rule 10 (statement -> empty .)
    BOOLEAN         reduce using rule 10 (statement -> empty .)
    RBRACE          reduce using rule 10 (statement -> empty .)


state 16

    (11) statement -> assignment .

    PUBLIC          reduce using rule 11 (statement -> assignment .)
    ID              reduce using rule 11 (statement -> assignment .)
    SYSTEM          reduce using rule 11 (statement -> assignment .)
    FOR             reduce using rule 11 (statement -> assignment .)
    IF              reduce using rule 11 (statement -> assignment .)
    INT             reduce using rule 11 (statement -> assignment .)
    DOUBLE          reduce using rule 11 (statement -> assignment .)
    STRING          reduce using rule 11 (statement -> assignment .)
    BOOLEAN         reduce using rule 11 (statement -> assignment .)
    RBRACE          reduce using rule 11 (statement -> assignment .)


state 17

    (12) statement -> array_usage .

    PUBLIC          reduce using rule 12 (statement -> array_usage .)
    ID              reduce using rule 12 (statement -> array_usage .)
    SYSTEM          reduce using rule 12 (statement -> array_usage .)
    FOR             reduce using rule 12 (statement -> array_usage .)
    IF              reduce using rule 12 (statement -> array_usage .)
    INT             reduce using rule 12 (statement -> array_usage .)
    DOUBLE          reduce using rule 12 (statement -> array_usage .)
    STRING          reduce using rule 12 (statement -> array_usage .)
    BOOLEAN         reduce using rule 12 (statement -> array_usage .)
    RBRACE          reduce using rule 12 (statement -> array_usage .)


state 18

    (13) statement -> array_dcl .

    PUBLIC          reduce using rule 13 (statement -> array_dcl .)
    ID              reduce using rule 13 (statement -> array_dcl .)
    SYSTEM          reduce using rule 13 (statement -> array_dcl .)
    FOR             reduce using rule 13 (statement -> array_dcl .)
    IF              reduce using rule 13 (statement -> array_dcl .)
    INT             reduce using rule 13 (statement -> array_dcl .)
    DOUBLE          reduce using rule 13 (statement -> array_dcl .)
    STRING          reduce using rule 13 (statement -> array_dcl .)
    BOOLEAN         reduce using rule 13 (statement -> array_dcl .)
    RBRACE          reduce using rule 13 (statement -> array_dcl .)


state 19

    (14) statement -> array_assignment .

    PUBLIC          reduce using rule 14 (statement -> array_assignment .)
    ID              reduce using rule 14 (statement -> array_assignment .)
    SYSTEM          reduce using rule 14 (statement -> array_assignment .)
    FOR             reduce using rule 14 (statement -> array_assignment .)
    IF              reduce using rule 14 (statement -> array_assignment .)
    INT             reduce using rule 14 (statement -> array_assignment .)
    DOUBLE          reduce using rule 14 (statement -> array_assignment .)
    STRING          reduce using rule 14 (statement -> array_assignment .)
    BOOLEAN         reduce using rule 14 (statement -> array_assignment .)
    RBRACE          reduce using rule 14 (statement -> array_assignment .)


state 20

    (15) statement -> print_statement .

    PUBLIC          reduce using rule 15 (statement -> print_statement .)
    ID              reduce using rule 15 (statement -> print_statement .)
    SYSTEM          reduce using rule 15 (statement -> print_statement .)
    FOR             reduce using rule 15 (statement -> print_statement .)
    IF              reduce using rule 15 (statement -> print_statement .)
    INT             reduce using rule 15 (statement -> print_statement .)
    DOUBLE          reduce using rule 15 (statement -> print_statement .)
    STRING          reduce using rule 15 (statement -> print_statement .)
    BOOLEAN         reduce using rule 15 (statement -> print_statement .)
    RBRACE          reduce using rule 15 (statement -> print_statement .)


state 21

    (16) statement -> dcl_variable . SEMI

    SEMI            shift and go to state 39


state 22

    (17) statement -> dcl_variable_with_init . SEMI

    SEMI            shift and go to state 40


state 23

    (18) statement -> for_statement .

    PUBLIC          reduce using rule 18 (statement -> for_statement .)
    ID              reduce using rule 18 (statement -> for_statement .)
    SYSTEM          reduce using rule 18 (statement -> for_statement .)
    FOR             reduce using rule 18 (statement -> for_statement .)
    IF              reduce using rule 18 (statement -> for_statement .)
    INT             reduce using rule 18 (statement -> for_statement .)
    DOUBLE          reduce using rule 18 (statement -> for_statement .)
    STRING          reduce using rule 18 (statement -> for_statement .)
    BOOLEAN         reduce using rule 18 (statement -> for_statement .)
    RBRACE          reduce using rule 18 (statement -> for_statement .)


state 24

    (19) statement -> if_statement .

    PUBLIC          reduce using rule 19 (statement -> if_statement .)
    ID              reduce using rule 19 (statement -> if_statement .)
    SYSTEM          reduce using rule 19 (statement -> if_statement .)
    FOR             reduce using rule 19 (statement -> if_statement .)
    IF              reduce using rule 19 (statement -> if_statement .)
    INT             reduce using rule 19 (statement -> if_statement .)
    DOUBLE          reduce using rule 19 (statement -> if_statement .)
    STRING          reduce using rule 19 (statement -> if_statement .)
    BOOLEAN         reduce using rule 19 (statement -> if_statement .)
    RBRACE          reduce using rule 19 (statement -> if_statement .)


state 25

    (101) array_usage -> tipo_number . LBRACKET RBRACKET ID EQUALS LBRACE args RBRACE SEMI
    (103) array_dcl -> tipo_number . LBRACKET RBRACKET ID SEMI
    (88) dcl_variable -> tipo_number . ID
    (91) dcl_variable_with_init -> tipo_number . ID EQUALS NUMBER
    (94) dcl_variable_with_init -> tipo_number . ID EQUALS suma

    LBRACKET        shift and go to state 41
    ID              shift and go to state 42


state 26

    (102) array_usage -> tipo_palabra . LBRACKET RBRACKET ID EQUALS LBRACE args RBRACE SEMI
    (104) array_dcl -> tipo_palabra . LBRACKET RBRACKET ID SEMI
    (89) dcl_variable -> tipo_palabra . ID
    (92) dcl_variable_with_init -> tipo_palabra . ID EQUALS STRING_LITERAL

    LBRACKET        shift and go to state 43
    ID              shift and go to state 44


state 27

    (106) print_statement -> SYSTEM . PUNTO OUT PUNTO PRINTLN LPAREN STRING_LITERAL RPAREN SEMI
    (107) print_statement -> SYSTEM . PUNTO OUT PUNTO PRINTLN LPAREN ID RPAREN SEMI
    (108) print_statement -> SYSTEM . PUNTO OUT PUNTO PRINTLN LPAREN ID LBRACKET ID RBRACKET RPAREN SEMI

    PUNTO           shift and go to state 45


state 28

    (90) dcl_variable -> tipo_booleano . ID
    (93) dcl_variable_with_init -> tipo_booleano . ID EQUALS valor_boolean

    ID              shift and go to state 46


state 29

    (64) for_statement -> FOR . LPAREN inicializacion SEMI condicion SEMI increment_or_decrement RPAREN LBRACE statements RBRACE
    (65) for_statement -> FOR . LPAREN inicializacion SEMI condicion_var SEMI increment_or_decrement RPAREN LBRACE statements RBRACE
    (66) for_statement -> FOR . LPAREN dcl_variable COLON ID RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 47


state 30

    (68) if_statement -> IF . LPAREN condicion RPAREN LBRACE statements RBRACE
    (69) if_statement -> IF . LPAREN condicion RPAREN LBRACE statements RBRACE ELSE statements
    (70) if_statement -> IF . LPAREN condicion RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (71) if_statement -> IF . LPAREN condicion_if RPAREN LBRACE statements RBRACE
    (72) if_statement -> IF . LPAREN condicion_if RPAREN LBRACE statements RBRACE ELSE statements
    (73) if_statement -> IF . LPAREN condicion_if RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE

    LPAREN          shift and go to state 48


state 31

    (96) tipo_number -> INT .

    LBRACKET        reduce using rule 96 (tipo_number -> INT .)
    ID              reduce using rule 96 (tipo_number -> INT .)


state 32

    (97) tipo_number -> DOUBLE .

    LBRACKET        reduce using rule 97 (tipo_number -> DOUBLE .)
    ID              reduce using rule 97 (tipo_number -> DOUBLE .)


state 33

    (95) tipo_booleano -> BOOLEAN .

    ID              reduce using rule 95 (tipo_booleano -> BOOLEAN .)


state 34

    (86) assignment -> ID EQUALS . expression SEMI
    (105) array_assignment -> ID EQUALS . LBRACE args RBRACE SEMI
    (20) expression -> . ID
    (21) expression -> . NUMBER
    (22) expression -> . STRING_LITERAL
    (23) expression -> . NOT expression
